# SprayConnect

./: README.md  hosts.yaml  pyproject.toml  sc.py
conex/: __init__.py  cli.py  connection_manager.py  hosts.yaml  logger.py
sc/: __init__.py  cli.py  connection_manager.py  logger.py
